force-app/main/default/objects/Company_Chop__c/Company_Chop__c.object-meta.xml
<CustomObject>
    <label>Company Chop</label>
    <nameField>
        <displayFormat>CR-{000000000}</displayFormat>
        <label>申请编号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>