force-app/main/default/objects/Company_Chop__c/fields/Apply_Date__c.field-meta.xml
<CustomField>
    <fullName>Apply_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>申请日期</label>
    <type>Date</type>
</CustomField>