force-app/main/default/objects/Company_Chop__c/fields/Apply_Department__c.field-meta.xml
<CustomField>
    <fullName>Apply_Department__c</fullName>
    <formula>$User.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>申请人部门</label>
    <type>Text</type>
</CustomField>