force-app/main/default/objects/Company_Chop__c/fields/Apply_User__c.field-meta.xml
<CustomField>
    <fullName>Apply_User__c</fullName>
    <formula>$User.FirstName + &apos; &apos; +  $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>申请人姓名</label>
    <type>Text</type>
</CustomField>