force-app/main/default/objects/Company_Chop__c/fields/Approvals_Status__c.field-meta.xml
<CustomField>
    <fullName>Approvals_Status__c</fullName>
    <defaultValue>&apos;未提交&apos;</defaultValue>
    <label>审批状态</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Approval_Status</valueSetName>
    </valueSet>
</CustomField>