force-app/main/default/objects/Company_Chop__c/fields/Approver2__c.field-meta.xml
<CustomField>
    <fullName>Approver2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Company_Chop1</relationshipName>
    <type>Lookup</type>
</CustomField>