force-app/main/default/objects/Company_Chop__c/fields/Approver3__c.field-meta.xml
<CustomField>
    <fullName>Approver3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Company_Chop2</relationshipName>
    <type>Lookup</type>
</CustomField>