force-app/main/default/objects/Company_Chop__c/fields/Certification_Doc__c.field-meta.xml
<CustomField>
    <fullName>Certification_Doc__c</fullName>
    <label>证照文件</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Legal_Entity__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>营业执照正副本</fullName>
            </value>
            <value>
                <fullName>法人身份证</fullName>
            </value>
            <value>
                <fullName>开户许可证</fullName>
            </value>
            <value>
                <fullName>一般纳税人资格证书</fullName>
            </value>
            <value>
                <fullName>外汇登记证</fullName>
            </value>
            <value>
                <fullName>外资企业备案证明</fullName>
            </value>
            <value>
                <fullName>医疗器械经营许可证</fullName>
            </value>
            <value>
                <fullName>第二类医疗器械经营备案凭证</fullName>
            </value>
            <value>
                <fullName>药品经营许可证 正副本</fullName>
            </value>
            <value>
                <fullName>GSP证书</fullName>
            </value>
            <value>
                <fullName>进口药品注册证</fullName>
            </value>
            <value>
                <fullName>药品生产许可证</fullName>
            </value>
            <value>
                <fullName>海关登记证</fullName>
            </value>
            <value>
                <fullName>自理报检证</fullName>
            </value>
            <value>
                <fullName>财政登记证</fullName>
            </value>
            <value>
                <fullName>银行开户结算书</fullName>
            </value>
            <value>
                <fullName>回乡证</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>