force-app/main/default/objects/Company_Chop__c/fields/Contract_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Approval_Status__c</fullName>
    <formula>TEXT( Contract_Management__r.Approval_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>合同审批状态</label>
    <type>Text</type>
</CustomField>