force-app/main/default/objects/Company_Chop__c/fields/Contract_Management__c.field-meta.xml
<CustomField>
    <fullName>Contract_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>关联合同审批单</label>
    <referenceTo>CustomContract__c</referenceTo>
    <relationshipLabel>Company Chop</relationshipLabel>
    <relationshipName>Company_Chop</relationshipName>
    <type>Lookup</type>
</CustomField>