force-app/main/default/objects/Company_Chop__c/fields/Contract_T__c.field-meta.xml
<CustomField>
    <fullName>Contract_T__c</fullName>
    <formula>TEXT( Contract_Management__r.ContactType__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>合同类型</label>
    <type>Text</type>
</CustomField>