force-app/main/default/objects/Company_Chop__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>合同类型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>采购相关协议</fullName>
            </value>
            <value>
                <fullName>临床研究相关协议</fullName>
            </value>
            <value>
                <fullName>OEC相关协议</fullName>
            </value>
            <value>
                <fullName>HR相关协议</fullName>
            </value>
            <value>
                <fullName>HIV招标相关协议</fullName>
            </value>
            <value>
                <fullName>商务部相关协议</fullName>
            </value>
            <value>
                <fullName>办公租赁协议</fullName>
            </value>
            <value>
                <fullName>质量部相关协议</fullName>
            </value>
            <value>
                <fullName>医学相关协议</fullName>
            </value>
            <value>
                <fullName>注册部相关协议</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>