force-app/main/default/objects/Company_Chop__c/fields/Contract_Types__c.field-meta.xml
<CustomField>
    <fullName>Contract_Types__c</fullName>
    <label>合同分类</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contract_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>框架协议/补充或修改协议</fullName>
            </value>
            <value>
                <fullName>未使用或修改艾伯维模板的采购协议</fullName>
            </value>
            <value>
                <fullName>工作说明书(SOW)</fullName>
            </value>
            <value>
                <fullName>Local Review</fullName>
            </value>
            <value>
                <fullName>Global Review</fullName>
            </value>
            <value>
                <fullName>保密协议</fullName>
            </value>
            <value>
                <fullName>捐赠协议</fullName>
            </value>
            <value>
                <fullName>赞助协议</fullName>
            </value>
            <value>
                <fullName>参会协议</fullName>
            </value>
            <value>
                <fullName>研究资助协议</fullName>
            </value>
            <value>
                <fullName>员工劳动合同/劳务解除合同</fullName>
            </value>
            <value>
                <fullName>其他与政府合同</fullName>
            </value>
            <value>
                <fullName>其他与HR部门相关或发起的协议</fullName>
            </value>
            <value>
                <fullName>招标相关-标书</fullName>
            </value>
            <value>
                <fullName>招标相关-药品配送协议</fullName>
            </value>
            <value>
                <fullName>招标相关-中标服务费支付协议</fullName>
            </value>
            <value>
                <fullName>招标相关-采购合同</fullName>
            </value>
            <value>
                <fullName>经销商相关合作协议（使用公司模板）</fullName>
            </value>
            <value>
                <fullName>销售合同</fullName>
            </value>
            <value>
                <fullName>艾伯维分公司</fullName>
            </value>
            <value>
                <fullName>租赁式服务办公室</fullName>
            </value>
            <value>
                <fullName>质量保证协议</fullName>
            </value>
            <value>
                <fullName>药物警戒协议</fullName>
            </value>
            <value>
                <fullName>临床研究协议</fullName>
            </value>
            <value>
                <fullName>委托检验合同</fullName>
            </value>
            <value>
                <fullName>其他</fullName>
            </value>
            <value>
                <fullName>谈判协议，与政府相关协议</fullName>
            </value>
            <value>
                <fullName>药物经济学合同(供应商模板)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>