force-app/main/default/objects/Company_Chop__c/fields/ContractAmountType__c.field-meta.xml
<CustomField>
    <fullName>ContractAmountType__c</fullName>
    <formula>TEXT( Contract_Management__r.ContractAmountType__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>合同金额分类</label>
    <type>Text</type>
</CustomField>