force-app/main/default/objects/Company_Chop__c/fields/Files_Content__c.field-meta.xml
<CustomField>
    <fullName>Files_Content__c</fullName>
    <label>文件内容</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Files_Types__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>在职证明/薪资证明</fullName>
            </value>
            <value>
                <fullName>劳动手册/退工单</fullName>
            </value>
            <value>
                <fullName>税单/完税证明</fullName>
            </value>
            <value>
                <fullName>居住证申请文件</fullName>
            </value>
            <value>
                <fullName>外籍员工居留许可/工作签证申请文件</fullName>
            </value>
            <value>
                <fullName>员工社保/公积金相关文件</fullName>
            </value>
            <value>
                <fullName>ESPP相关文件</fullName>
            </value>
            <value>
                <fullName>公司信用卡申请</fullName>
            </value>
            <value>
                <fullName>公司税务相关文件</fullName>
            </value>
            <value>
                <fullName>询证函</fullName>
            </value>
            <value>
                <fullName>注册申请表</fullName>
            </value>
            <value>
                <fullName>注册申请资料封面</fullName>
            </value>
            <value>
                <fullName>公文、申请函、企业标准、COA</fullName>
            </value>
            <value>
                <fullName>自查表</fullName>
            </value>
            <value>
                <fullName>临床试验方案、临床试验总结报告</fullName>
            </value>
            <value>
                <fullName>经销商授权书</fullName>
            </value>
            <value>
                <fullName>配送委托书</fullName>
            </value>
            <value>
                <fullName>招投标文件</fullName>
            </value>
            <value>
                <fullName>价格相关文件</fullName>
            </value>
            <value>
                <fullName>产品资料</fullName>
            </value>
            <value>
                <fullName>法人委托书</fullName>
            </value>
            <value>
                <fullName>进药资料</fullName>
            </value>
            <value>
                <fullName>授权委托书</fullName>
            </value>
            <value>
                <fullName>律师函</fullName>
            </value>
            <value>
                <fullName>声明</fullName>
            </value>
            <value>
                <fullName>授权书</fullName>
            </value>
            <value>
                <fullName>准入/谈判相关申请函/沟通函/说明函</fullName>
            </value>
            <value>
                <fullName>其他需Legal审阅文件</fullName>
            </value>
            <value>
                <fullName>医疗器械年度自查报告</fullName>
            </value>
            <value>
                <fullName>医疗器械检查记录（日常监督检查、专项检查以及飞行检查等）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>