force-app/main/default/objects/Company_Chop__c/fields/Files_Type__c.field-meta.xml
<CustomField>
    <fullName>Files_Type__c</fullName>
    <label>文件类型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>证照</fullName>
            </value>
            <value>
                <fullName>合同</fullName>
            </value>
            <value>
                <fullName>其他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>