force-app/main/default/objects/Company_Chop__c/fields/Files_Types__c.field-meta.xml
<CustomField>
    <fullName>Files_Types__c</fullName>
    <label>文件大类</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HR相关文件</fullName>
            </value>
            <value>
                <fullName>财务相关文件</fullName>
            </value>
            <value>
                <fullName>RA注册相关文件</fullName>
            </value>
            <value>
                <fullName>Trade相关招标资料</fullName>
            </value>
            <value>
                <fullName>BU相关文件</fullName>
            </value>
            <value>
                <fullName>Legal相关文件</fullName>
            </value>
            <value>
                <fullName>GSP相关文件</fullName>
            </value>
            <value>
                <fullName>市场准入相关文件</fullName>
            </value>
            <value>
                <fullName>报关相关文件</fullName>
            </value>
            <value>
                <fullName>临床研究相关文件</fullName>
            </value>
            <value>
                <fullName>VISA相关文件</fullName>
            </value>
            <value>
                <fullName>行政相关文件</fullName>
            </value>
            <value>
                <fullName>PA相关文件</fullName>
            </value>
            <value>
                <fullName>超过系统容量的超大文件</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>