force-app/main/default/objects/Company_Chop__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <label>法律实体</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>艾伯维医药贸易(上海)有限公司</fullName>
            </value>
            <value>
                <fullName>北京分公司</fullName>
            </value>
            <value>
                <fullName>广州分公司</fullName>
            </value>
            <value>
                <fullName>杭州分公司</fullName>
            </value>
            <value>
                <fullName>成都分公司</fullName>
            </value>
            <value>
                <fullName>静安分公司</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>