force-app/main/default/objects/Company_Chop__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>备注</label>
    <type>TextArea</type>
</CustomField>