force-app/main/default/objects/Company_Chop__c/fields/Seal_Type__c.field-meta.xml
<CustomField>
    <fullName>Seal_Type__c</fullName>
    <label>盖章类型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>公章</fullName>
            </value>
            <value>
                <fullName>法人章</fullName>
            </value>
            <value>
                <fullName>合同章</fullName>
            </value>
            <value>
                <fullName>财务专用章</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>