force-app/main/default/objects/Company_Chop__c/fields/Signature_Target__c.field-meta.xml
<CustomField>
    <fullName>Signature_Target__c</fullName>
    <formula>TEXT(Contract_Management__r.Signature_Target__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>合同签署对象</label>
    <type>Text</type>
</CustomField>