force-app/main/default/objects/Company_Chop__c/recordTypes/Full.recordType-meta.xml
<RecordType>
    <fullName>Full</fullName>
    <active>true</active>
    <label>Full</label>
</RecordType>