force-app/main/default/objects/Company_Chop__c/validationRules/File_Type_Equal_to_Licence.validationRule-meta.xml
<ValidationRule>
    <fullName>File_Type_Equal_to_Licence</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Files_Type__c , &apos;证照&apos;), 
    OR(
      ISPICKVAL( Legal_Entity__c ,&apos;&apos;), 
      ISPICKVAL( Certification_Doc__c , &apos;&apos;) 
    )
)</errorConditionFormula>
    <errorMessage>文件类型等于证照时，法律实体与证照文件必填</errorMessage>
</ValidationRule>