force-app/main/default/objects/Company_Chop__c/validationRules/File_Type_Equal_to_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>File_Type_Equal_to_Other</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
ISPICKVAL( Files_Type__c , &apos;其他&apos;), 
OR( 
ISPICKVAL(  Files_Content__c ,&apos;&apos;), 
ISPICKVAL(  Files_Types__c , &apos;&apos;) 
) 
)</errorConditionFormula>
    <errorMessage>文件类型等于其他时，文件大类与文件内容必填</errorMessage>
</ValidationRule>