force-app/main/default/objects/Company_Chop__c/validationRules/validation_phone.validationRule-meta.xml
<ValidationRule>
    <fullName>validation_phone</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( TEXT( phone__c ) ,  &apos;^1[3|4|5|7|8][0-9]\\d{8}$&apos;))</errorConditionFormula>
    <errorMessage>手机号不对</errorMessage>
</ValidationRule>