force-app/main/default/objects/Company_Chop__c/listViews/Approver_Company_Chop.listView-meta.xml
<ListView>
    <fullName>Approver_Company_Chop</fullName>
    <filterScope>Queue</filterScope>
    <label>Approver</label>
    <queue>Approver</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>